# lab_06

./: .gitignore  CMakeLists.txt  camera_projection_measurement.cpp  camera_projection_measurement.h  homography_pose_estimator.cpp  homography_pose_estimator.h  lab_6.cpp  moba_pose_estimator.cpp  moba_pose_estimator.h  plane_world_model.cpp  plane_world_model.h  pnp_pose_estimator.cpp  pnp_pose_estimator.h  pose_estimator.h
include/estimators/: homography_pose_estimator.h  moba_pose_estimator.h  pnp_pose_estimator.h  pose_estimator.h
include/models/: plane_world_model.h
include/utilities/: camera_projection_measurement.h  feature_utils.h
include/visualise/: ar_example.h  scene_3d.h
src/: lab_6.cpp  main.cpp
src/estimators/: homography_pose_estimator.cpp  moba_pose_estimator.cpp  pnp_pose_estimator.cpp
src/models/: plane_world_model.cpp
src/utilities/: camera_projection_measurement.cpp  feature_utils.cpp
src/visualise/: ar_example.cpp  scene_3d.cpp
